CAR-23: Card add and Update API
